# soundpuff-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SWAGGER_UI_GUIDE.md  pyproject.toml  requirements.txt
.github/workflows/: soundpuff.yml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  playlists.py  songs.py  users.py
app/core/: config.py  deps.py  security.py  supabase.py
app/db/: base.py  session.py
app/models/: __init__.py  association_tables.py  comment.py  follow.py  like.py  playlist.py  playlist_songs.py  song.py  user.py
app/schemas/: comment.py  follow.py  like.py  playlist.py  search.py  song.py  token.py  user.py
scripts/: import_songs.py
supabase/migrations/: 20250125000001_create_tables.sql  20250125000002_enable_rls.sql
tests/: conftest.py  test_config.py
